# embedded-course-project

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  filter.c  filter.h  main.c
libs/libopencm3/: CMakeLists.txt  README.md
src/: CMakeLists.txt  filter.c  filter.h  main.c
